# smi-acquire

./: .gitignore  README.md  pixi.toml  pyproject.toml
apps/: _panel_common.py  acquire_app.py  nicegui_app.py  panel_dashboard.py  panel_wizard.py  qt_app.py
config/: microscope.yaml
docs/: DESIGN.md  SMI_PLANS_FOLLOWUPS.md
src/smi_acquire/: __init__.py  codegen.py  config_store.py  dryrun.py  execute.py  guidance.py  interlock.py  interview.py  lists.py  project.py  proposal.py  registry.py  samples.py  spec.py  store.py  techniques.py  wizard.py
src/smi_acquire/microscope/: __init__.py  builder.py  calibration.py  camera_stream.py  config.py  devices.py  geometry.py  mosaic.py  overlays.py  scripts.py  wide_view.py
src/smi_acquire/microscope/modes/: area.py  base.py  calibrate.py  focus.py  interactive.py  linear.py  square.py
src/smi_acquire/microscope/widgets/: beam_panel.py  exposure.py  motor_panel.py  script_panel.py  status_bar.py  toggle.py
src/smi_acquire/sim/: __init__.py  beamline.py  fake_ioc.py
tests/: test_calibration.py  test_config_store.py  test_core.py  test_execute.py  test_fake_ioc.py  test_interactive_markers.py  test_lists.py  test_mosaic.py  test_project.py  test_proposal.py  test_quick_scripts.py  test_stage_axes.py  test_wide_view.py  test_wizard.py
