[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "smi-acquire"
version = "0.0.1"
description = "Sample-list + technique-picker + script-generator core for the NSLS-II SMI-SWAXS endstation"
requires-python = ">=3.8"
readme = "README.md"
license = { text = "BSD-3-Clause" }
dependencies = []

[project.optional-dependencies]
panel = ["panel>=1.8", "bokeh>=3.9", "pandas>=2.0"]
qt = ["pyside6"]
nicegui = ["nicegui"]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
